--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
@@ -3,9 +3,34 @@
 }
 .item{
     font-size: 13pt;
+    position: relative;
 }
 .main-info{
     margin-bottom: 30px;
+}
+.main-info .item i{
+    margin-left: 5px;
+}
+.change-panel{
+    z-index: 200;
+    position: absolute;
+    bottom: -80px;
+    left: 50px;
+}
+.change-panel>.form input, .change-panel>.form select{
+    margin-bottom: 5px;
+    border-radius: 4px;
+    border: 1px solid gray; 
+    height: 25px;
+}
+.change-panel>.form{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 300px;
+    background-color: white;
+    border:1px solid black;
+    border-radius: 4px;
 }
 .book-item{
     box-shadow: 0 0 7px rgb(255, 48, 48);
