--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,15 +1,15 @@
 <div class="topmenu">
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-4" style="display: inline-block; ">
             <img src="../../assets/images/logo.png">
         </div>
         
         <div class="row menu-prop">
             
             <div *ngIf="!userService.currentUser" (click)="userService.ShowForm(1)"><span  class='glyphicon glyphicon-plus'></span><span>{{"REGISTRATION" | translate}}</span></div>
-            <!-- <div [routerLinkActive]='["link-active"]'> -->
+         
             <div [routerLinkActive]='["link-active"]' *ngIf="!!userService.currentUser"  [routerLink]='["/user"]'><span  class='glyphicon glyphicon-user'></span><span>{{userService.currentUser.Name}}</span></div>
-            <!-- </div> -->
+           
             
             <div (click)="userService.currentUser?Exit():userService.ShowForm(0)"><span *ngIf="!userService.currentUser"   class='glyphicon glyphicon-user'></span><span>{{(userService.currentUser?"LOG_OUT":"LOG_IN") | translate}}</span></div>
             <div class = "lang">
@@ -74,7 +74,7 @@
                                     </a>
                                 </li>
                                 <li [routerLinkActive]='["link-active"]'>
-                                    <a [routerLink]='["/rules"]' (click)='collapse()'>
+                                    <a [routerLink]='["/contacts"]' (click)='collapse()'>
                                         <i class="fa fa-address-card"></i>{{"CONTACTS" | translate}}
                                     </a>
                                 </li>
@@ -94,7 +94,7 @@
                                     </a>
                                 </li>
                                 <li [routerLinkActive]='["link-active"]' (click)="changePage(4)">
-                                    <a [routerLink]='["/contacts"]' (click)='collapse()'>
+                                    <a [routerLink]='["/rent-iraklion"]' (click)='collapse()'>
                                         <i class="fa fa-dollar"></i> {{"RENT_IRAKLEON" | translate}}
                                     </a>
                                 </li>
