--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <div class="topmenu">
     <div class="row">
-        <div class="col-xs-4" style="display: inline-block; ">
-            <img src="../../assets/images/logo.png">
+        <div class="col-sm-4" style="display: inline-block; ">
+            <img  src="../../assets/images/logo.png">
         </div>
         
         <div class="row menu-prop">
@@ -84,7 +84,7 @@
                                     </a>
                                 </li>
                                 <li [routerLinkActive]='["link-active"]' (click)="changePage(3)">
-                                    <a [routerLink]='["/news"]' (click)='collapse()'>
+                                    <a [routerLink]='["/about"]' (click)='collapse()'>
                                         <i class="fa fa-book"></i> {{"ABOUT_CRETE" | translate}}
                                     </a>
                                 </li>
