сделал футер и лаудер

--- a/CarsCrete/ClientApp/src/app/loader/loader.component.html
+++ b/CarsCrete/ClientApp/src/app/loader/loader.component.html
@@ -7,5 +7,5 @@
     left: 0;
     width: 100%;
     height: 100%;">
-      <img style="width: 40px; height: 40px;" src="../../assets/images/load.gif" alt="">
+      <img style="width: 48px; height: 36px;" src="../../assets/images/load1.gif" alt="">
     </div>
