--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -93,11 +93,11 @@
                                         <i class="fa fa-comments"></i> {{"COMMENTS" | translate}}
                                     </a>
                                 </li>
-                                <li [routerLinkActive]='["link-active"]' (click)="changePage(4)">
+                                <!-- <li [routerLinkActive]='["link-active"]' (click)="changePage(4)">
                                     <a [routerLink]='["/rent-iraklion"]' (click)='collapse()'>
                                         <i class="fa fa-dollar"></i> {{"RENT_IRAKLEON" | translate}}
                                     </a>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
