--- a/CarsCrete/ClientApp/src/app/footer/footer.component.html
+++ b/CarsCrete/ClientApp/src/app/footer/footer.component.html
@@ -1,6 +1,12 @@
 <div class="row">
-  <div class="col-sm-4">
-    <img src="../../assets/images/logo.png" alt="">
+  <div class="col-sm-4" >
+    <div style="display: flex; flex-direction: column; align-items: center;">
+      <img src="../../assets/images/logo.png" alt="">
+      <address style="margin-top: 10px;">
+        Аммудара, Андреа Папандреу, 247
+      </address>
+    </div>
+    
   </div>
   <div class="col-sm-4">
 
