Сделал лайки нормальные, но без возможности их изменения или удаления

--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.css
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.css
@@ -182,6 +182,12 @@ textarea{
     color:blue;
 
 }
+.checked-up{
+    color:green;
+}
+.checked-down{
+    color: red;
+}
 .picker{
     width: auto !important;
 }
