--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
@@ -96,13 +96,13 @@
                                     <div class="col-sm-3">
                                         <span class="glyphicon glyphicon-time"></span> {{comment.CreatedDate | date: 'dd.MM.yyyy'}}
                                         <br>
-                                        <div class="com-rat" (click)="addLikes(comment, true, false)">
-                                                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                                                <span>{{comment.Likes}}</span>
+                                        <div class="com-rat" (click)="addLikes(com, true, comment)">
+                                                <i class="fa fa-thumbs-up" [ngClass]="{'checked-up':getUserLike(comment)?getUserLike(comment).IsLike==true:false}" aria-hidden="true"></i>
+                                                <span>{{getLikes(comment,true)}}</span>
                                         </div>
-                                        <div class="com-rat" (click)="addLikes(comment, false, false)">
-                                            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-                                            <span>{{comment.Dislikes}}</span>
+                                        <div class="com-rat" (click)="addLikes(com, false, comment)">
+                                            <i class="fa fa-thumbs-down" [ngClass]="{'checked-down':getUserLike(comment)?getUserLike(comment).IsLike==false:false}" aria-hidden="true"></i>
+                                            <span>{{getLikes(comment,false)}}</span>
                                         </div>
                                     </div>
                                 </div>
@@ -110,13 +110,13 @@
                         </div>
                     </div>
                     <div class="col-sm-3">
-                        <div class="com-rat" (click)="addLikes(com, true, true)">
-                            <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                            <span>{{com.Likes}}</span>
+                        <div class="com-rat" (click)="addLikes(com, true)">
+                            <i class="fa fa-thumbs-up" [ngClass]="{'checked-up':getUserLike(com)?getUserLike(com).IsLike==true:false}" aria-hidden="true"></i>
+                            <span>{{getLikes(com,true)}}</span>
                         </div>
-                        <div class="com-rat" (click)="addLikes(com, false, true)">
-                            <i class="fa fa-thumbs-down" aria-hidden="true"></i>
-                            <span>{{com.Dislikes}}</span>
+                        <div class="com-rat" (click)="addLikes(com, false)">
+                            <i class="fa fa-thumbs-down" [ngClass]="{'checked-down':getUserLike(com)?getUserLike(com).IsLike==false:false}"  aria-hidden="true"></i>
+                            <span>{{getLikes(com,false)}}</span>
                         </div>
                         <div class="com-rat">
                                 <i class="fa fa-commenting" aria-hidden="true"></i>
