--- a/CarsCrete/ClientApp/src/app/footer/footer.component.html
+++ b/CarsCrete/ClientApp/src/app/footer/footer.component.html
@@ -13,11 +13,11 @@
   </div>
   <div class="col-sm-4">
     <div class="item">
-      <h5><i class="fa fa-envelope-o"></i> Email</h5>
+      <h5><i class="fa fa-envelope-o"></i> {{'EMAIL'|translate}}</h5>
       <a href="mailto:info@carcrete24.com">info@carcrete24.com</a>
     </div>
     <div class="item">
-      <h5><i class="fa fa-phone"></i> Phone Number</h5>
+      <h5><i class="fa fa-phone"></i> {{'PHONE'|translate}}</h5>
       <a href="tel:00306949367278">+30 69493 67278 </a><br>
       
     </div>
