--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,10 @@
 <div class="topmenu">
     <div class="row">
         <div class="col-sm-4" style="display: inline-block; ">
-            <img  src="../../assets/images/logo.png">
+            <a [routerLink]='["/"]' (click)='collapse()'>
+                <img  src="../../assets/images/logo.png">
+            </a>
+            
         </div>
         
         <div class="row menu-prop">
