--- a/CarsCrete/ClientApp/src/app/picker/picker.component.css
+++ b/CarsCrete/ClientApp/src/app/picker/picker.component.css
@@ -83,3 +83,24 @@ i:hover{
 .item:not(:last-child){
     border-bottom: 1px solid gray; 
 }
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 0 4px 4px 0;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(99, 128, 255); 
+    border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #2011ee; 
+}
