Незначительные фиксации:  - удаление лишних лайков при загрузке авто по ид  - добавил margin на странице автомобилей

--- a/CarsCrete/ClientApp/src/app/cars/cars.component.html
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.html
@@ -1,4 +1,4 @@
-<h1>{{"OUR_CARS" | translate}}</h1>
+<h1 style="margin-left: 15px;">{{"OUR_CARS" | translate}}</h1>
 <div class="container-fluid">
   <div class="filters row">
     
