--- a/CarsCrete/ClientApp/src/app/cars/cars.component.css
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.css
@@ -18,7 +18,9 @@
         box-shadow: inset 0 0 10px black;
     }
 }
-
+.row{
+    margin:0;
+}
 .filters .col-sm-3{
     position: relative;
     cursor: pointer;
