Добавил в rental-policy.ts список и сделал его вывод в html (css доделать нужно)

--- a/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.css
+++ b/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.css
@@ -41,3 +41,8 @@ img{
 .fa-info-circle{
     color:blue;
 }
+
+/*Снизу я долго не думал и двигаю полностью class row*/
+.row{
+  margin-left: 220px;
+}
