--- a/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.html
+++ b/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.html
@@ -1,10 +1,12 @@
+<!-- Старый вариант:
+
 <div class="container">
-  <h1>{{'RENTAL_POLICY_HEADER' | translate}}</h1>
-  <h3>{{'RENTAL_POLICY_DESCRIBTION' | translate}}</h3>
-  <br><br><br>
-  <h4>{{'RENTAL_POLICY_PRICE_INCLUDE_HEADER' | translate}}:</h4>
-  <p>{{'RENTAL_POLICY_PRICE_INCLUDE' | translate}}</p>
-  <div class="include">
+   <h1>{{'RENTAL_POLICY_HEADER' | translate}}</h1>
+   <h3>{{'RENTAL_POLICY_DESCRIBTION' | translate}}</h3>
+   <br><br><br>
+   <h4>{{'RENTAL_POLICY_PRICE_INCLUDE_HEADER' | translate}}:</h4>
+   <p>{{'RENTAL_POLICY_PRICE_INCLUDE' | translate}}</p>
+   <div class="include">
       <hr>
       <i class="fa fa-shield fa-4x pull-left"></i>
       <h4>
@@ -12,23 +14,33 @@
         {{'RENTAL_POLICY_PRICE_INCLUDE_1' | translate}}
       </h4>
       <p>Не следует, однако забывать, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации форм развития. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития. Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития.</p>
-  </div>
-</div>
-<div class="bg-blurrr" style="background-image: url(../../assets/images/nissan-micra-wide.jpg); background-size: cover">
-  <!-- <img src="../../assets/images/nissan-micra-wide.jpg" alt=""> -->
-  <div class="mask"></div>
-  <h1>{{'CONDITIONS'| translate}}</h1>
-</div>
-<div class="container">
-  <div class="condition">
-      
-      <h4>
-        <i class="fa fa-info-circle"></i>
-        {{'CONDITION_HEADER' | translate}}
-      </h4>
-      <p>Не следует, однако забывать, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации форм развития. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития. Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития.</p>
-      <hr>
-  </div>
-  
-</div>
+    </div>
+    <div class="bg-blurrr" style="background-image: url(../../assets/images/nissan-micra-wide.jpg); background-size: cover">
+      <img src="../../assets/images/nissan-micra-wide.jpg" alt="">
+      <div class="mask"></div>
+      <h1>{{'CONDITIONS'| translate}}</h1>
+    </div>
+    <div class="container">
+      <div class="condition">
 
+        <h4>
+          <i class="fa fa-info-circle"></i>
+          {{'CONDITION_HEADER' | translate}}
+        </h4>
+        <p>Не следует, однако забывать, что дальнейшее развитие различных форм деятельности способствует подготовки и реализации форм развития. С другой стороны рамки и место обучения кадров способствует подготовки и реализации модели развития. Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития.</p>
+        <hr>
+      </div>
+    </div>
+ </div>
+
+-->
+
+<div *ngFor="let i of items" class="item">
+  <div class="row">
+    <div class="col-sm-10">
+      <h4><i class="fa fa-shield fa-4x pull-left"></i>{{i.Name | translate}}</h4>
+        <p>{{i.Description}}</p>
+    </div>
+  </div>
+  <hr>
+</div>
