--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
@@ -11,6 +11,58 @@
 .main-info .item i{
     margin-left: 5px;
 }
+.user-photo{
+    position: relative;
+    
+}
+
+.upload{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.upload input{
+    position: absolute;
+    z-index: -1;
+    display: none;
+}
+.upload input:hover{
+    display: none;
+}
+.user-photo>.upload{
+    position: absolute;
+    bottom: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 30px;
+    opacity: 0;
+}
+.user-photo:hover>.upload{
+    transition: 0.2s;
+    bottom: 10px;
+    opacity: 1;
+}
+.uploadButton {
+    z-index: 100;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 180px;
+    color:white;
+    display: block;
+    line-height: 30px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: normal;
+    margin-bottom: 0;
+    border: 1px solid rgba(0, 0, 0, 0.555);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.575);
+    background-color: rgba(0, 0, 0, 0.267)
+}
+.uploadButton:hover {
+    background: rgba(0, 0, 0, 0.788);
+}
 .change-panel{
     z-index: 200;
     position: absolute;
