--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -3,7 +3,19 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="d-flex flex-column justify-content-center">
-          <img class="img-rounded img-responsive" src="{{userService.currentUser?userService.currentUser.Photo:'../../assets/images/default_user_photo.jpg'}}" alt="">
+          <div class="user-photo">
+            <img class="img-rounded img-responsive" src="{{userService.currentUser?userService.currentUser.Photo:'../../assets/images/default_user_photo.jpg'}}" alt="">
+            
+            <div class="upload">
+              <div>
+                  <label for="uploadbtn" class="uploadButton">{{'UPLOAD_PHOTO' | translate}}</label>
+                  <input style="opacity: 0; "  name="upload" id="uploadbtn" #file type="file"  (change)="upload(file.files)" />
+              </div>
+              
+            </div>
+            
+          </div>
+          
           <p style="text-align: center; font-size:18pt">{{userService.currentUser?userService.currentUser.Name:''}}</p>
         </div>
       </div>
@@ -95,7 +107,7 @@
       <h4 style="margin-left: 5px">{{'ORDER' | translate}} №{{book.Id}}</h4>
       <div class="row">
         
-        <div class="col-sm-3">
+        <div class="col-sm-4">
           <div class="car">
             <img src="{{book.Car.Photo}}" alt="">
             <div>
@@ -108,7 +120,7 @@
         <div class="col-sm-2 dates">
           <span>{{'PLACE' | translate}}: {{book.Place}}</span>
         </div>
-        <div class="col-sm-4 dates">
+        <div class="col-sm-3 dates">
           
           <span>{{'RENT' | translate}}: {{book.DateStart | date: 'dd.MM.yyyy'}} - {{book.DateFinish | date: 'dd.MM.yyyy'}}</span>
           
