--- a/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.css
+++ b/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.css
@@ -28,6 +28,8 @@ img{
     margin: 20px 0;
 }
 .bg-blurrr h1{
+    position: absolute;
+    left: 0;
     margin-left: 70px;
     color: white;
     z-index: 11;
