--- a/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.html
+++ b/CarsCrete/ClientApp/src/app/rental-policy/rental-policy.component.html
@@ -15,7 +15,7 @@
       </h4>
       <p>{{Translate.currentLang=='ru'?rule.Description:rule.DescriptionEng}}</p>
     </div>
-    <div class="bg-blurrr" style="background-image: url(../../assets/images/nissan-micra-wide.jpg); background-size: cover">
+    <div class="bg-blurrr" >
       <img src="../../assets/images/nissan-micra-wide.jpg" alt="">
       <div class="mask"></div>
       <h1>{{'CONDITIONS'| translate}}</h1>
