--- a/CarsCrete/ClientApp/src/app/contacts/contacts.component.html
+++ b/CarsCrete/ClientApp/src/app/contacts/contacts.component.html
@@ -4,8 +4,11 @@
 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A2d1fb22a069a10541fc2ef37d00fa8fefdd4621507c89800890f75125425da3a&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
 <div class="container">
   <div class="row">
-    <div class="col-md-7" style="height: 640px; display: flex; justify-content: center; align-items: center">
-      <h1>Здесь реализовать отправку сообщения.</h1>
+    <div class="col-md-7" style="height: 640px; display: flex; ">
+      <div style="width: 100%">
+          <messager [showAll]='true'></messager>
+      </div>
+      
     </div>
     <div class="col-md-5" style="height: 640px;">
       <h3>{{'CONTACT_INFO' | translate}}</h3>
